@@ -2898,7 +2898,7 @@ test interp-34.2 {basic test of limits - bytecoded commands} -body {
 } -returnCodes error -result {command count limit exceeded} -cleanup {
     interp delete $i
 }
-test interp-34.3 {basic test of limits - pure bytecode loop} knownBug {
+test interp-34.3 {basic test of limits - pure bytecode loop} -body {
     set i [interp create]
     $i eval {
 	proc foobar {} {
@@ -2907,11 +2907,12 @@ test interp-34.3 {basic test of limits - pure bytecode loop} knownBug {
 	    }
 	}
     }
-    $i limit command -value 1000
-    set msg [list [catch {$i eval foobar} msg] $msg]
+    # We use a time limit here; command limits don't trap this case
+    $i limit time -seconds [expr {[clock seconds]+2}]
+    $i eval foobar
+} -returnCodes error -result {time limit exceeded} -cleanup {
     interp delete $i
-    set msg
-} {1 {command count limit exceeded}}
+}
 test interp-34.4 {limits with callbacks: extending limits} -setup {
     set i [interp create]
     set a 0
