@@ -23,10 +23,10 @@ testConstraint pidDefined [llength [info commands pid]]
 test pid-1.1 {pid command} pidDefined {
     regexp {(^[0-9]+$)|(^0x[0-9a-fA-F]+$)} [pid]
 } 1
-test pid-1.2 {pid command} -constraints {unixOrPc unixExecs} -setup {
+test pid-1.2 {pid command} -constraints {unixOrPc unixExecs pidDefined} -setup {
     set path(test1) [makeFile {} test1]
     file delete $path(test1)
-} -constraints pidDefined -body {
+} -body {
     set f [open |[list echo foo | cat >$path(test1)] w]
     set pids [pid $f]
     close $f
